# openapi-nexus

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs  dist-workspace.toml  justfile  openapi-nexus-config.toml.example
crates/generators/openapi-nexus-go-http/: Cargo.toml
crates/generators/openapi-nexus-go-http/src/: lib.rs  sigil_emit.rs  sigil_emit_api.rs
crates/generators/openapi-nexus-go-http/tests/: golden_tests_go_http.rs
crates/generators/openapi-nexus-python-requests/: Cargo.toml
crates/generators/openapi-nexus-rust-common/: Cargo.toml
crates/generators/openapi-nexus-typescript-fetch/: Cargo.toml
crates/openapi-nexus/: Cargo.toml
crates/openapi-nexus-common/: Cargo.toml
crates/openapi-nexus-common/src/: language.rs  location.rs  warning.rs
crates/openapi-nexus-config/: Cargo.toml
crates/openapi-nexus-config/src/: cli.rs  config.rs  config_file.rs  errors.rs  global_config.rs
crates/openapi-nexus-core/: Cargo.toml
crates/openapi-nexus-core/src/: generator_type.rs  language.rs  lib.rs  traits.rs
crates/openapi-nexus-ir/: Cargo.toml
crates/openapi-nexus-ir/src/: analysis.rs  error.rs  lib.rs  tagged_enum_pattern.rs  traversal.rs  utils.rs
crates/openapi-nexus-parser/: Cargo.toml
crates/openapi-nexus-parser/src/: error.rs  lib.rs  parser.rs  serde_error.rs
crates/openapi-nexus-test-utils/: Cargo.toml
crates/openapi-nexus-test-utils/src/: lib.rs
crates/openapi-nexus/src/: generator_registry.rs  lib.rs  openapi_code_generator.rs
fixture-generators/additional-properties/: Cargo.toml
fixture-generators/additional-properties/src/: handlers.rs  lib.rs  models.rs  openapi.rs
fixture-generators/petstore/: Cargo.toml
openapi-nexus/: Cargo.toml
openapi-nexus-config/: Cargo.toml
openapi-nexus-config/src/: cli.rs  config.rs  config_file.rs  global_config.rs  language.rs  lib.rs  loader.rs  merger.rs  typescript_config.rs
openapi-nexus-core/: Cargo.toml
openapi-nexus-core/src/: data.rs  error.rs  generator.rs  generator_registry.rs  lib.rs  naming_convention.rs  openapi_code_generator.rs  parse_error.rs  serde.rs  tagged_enum_pattern.rs  traits.rs
openapi-nexus-core/src/data/: api_method_data.rs  content_type.rs  header_data.rs  http_response.rs  legacy_pipeline.rs  mod.rs  model_data.rs  operation_info.rs  parameter_info.rs  readme_data.rs  runtime_data.rs  status_code.rs
openapi-nexus-core/src/traits/: code_generator.rs  emission.rs  file_writer.rs  openapi_parameter_ext.rs  openapi_ref_ext.rs  operation_info_ext.rs
openapi-nexus-examples-petstore/: Cargo.toml
openapi-nexus-examples-petstore/src/: handlers.rs  lib.rs  openapi.rs
openapi-nexus-go/: Cargo.toml  build.rs
openapi-nexus-go/src/: codegen.rs  config.rs  consts.rs  errors.rs  generator.rs  lib.rs  runtime.rs  sigil_emit.rs  sigil_emit_api.rs  type_mapping.rs
openapi-nexus-go/src/ast/: go_expression.rs  mod.rs
openapi-nexus-go/src/codegen/: go_http_code_generator.rs
openapi-nexus-go/src/runtime/: auth.go.txt
openapi-nexus-go/src/templating/: data.rs  environment.rs  mod.rs  templates.rs
openapi-nexus-go/templates/common/: file_header.j2
openapi-nexus-go/templates/go-http/: README.md.j2
openapi-nexus-go/tests/: golden_tests_go_http.rs
openapi-nexus-ir/: Cargo.toml
openapi-nexus-ir/src/: analysis.rs  lib.rs  traversal.rs  utils.rs
openapi-nexus-ir/src/lower/: mod.rs  v31.rs
openapi-nexus-ir/src/types/: mod.rs  schema.rs  spec.rs
openapi-nexus-parser/: Cargo.toml
openapi-nexus-parser/src/: error.rs  lib.rs  parser.rs  yaml_context.rs
openapi-nexus-petstore-example/: Cargo.toml
openapi-nexus-petstore-example/src/: models.rs
openapi-nexus-rust/: Cargo.toml
openapi-nexus-spec/: Cargo.toml  build.rs
openapi-nexus-spec/src/: lib.rs
openapi-nexus-spec/src/oas30/: mod.rs
openapi-nexus-spec/src/oas31/: mod.rs
openapi-nexus-spec/src/oas32/: mod.rs
openapi-nexus-transforms/: Cargo.toml
openapi-nexus-transforms/src/: ir_context.rs  lib.rs  passes.rs  pipeline.rs
openapi-nexus-transforms/src/passes/: naming_convention.rs  path_normalization.rs  reference_resolution.rs  schema_normalization.rs
openapi-nexus-typescript/: Cargo.toml
openapi-nexus-typescript/src/: ast.rs  config.rs  core.rs  emission.rs  errors.rs  generator.rs  lib.rs  project_files.rs  sigil_emit.rs  sigil_emit_api.rs  templating.rs  ts_lang_generator.rs  utils.rs
openapi-nexus-typescript/src/ast/: common.rs  file.rs  ts_expression.rs  ty.rs
openapi-nexus-typescript/src/codegen/: typescript_fetch_code_generator.rs
openapi-nexus-typescript/src/config/: module.rs  typescript_fetch_config.rs
openapi-nexus-typescript/src/emission/: error.rs  ts_dependency_analyzer.rs  ts_type_emitter.rs
openapi-nexus-typescript/src/generator/: api_class_generator.rs  api_interface_builder.rs  api_operation_generator.rs  ir_schema_generator.rs  ir_type_expr.rs  model_import_collector.rs  package_files_generator.rs  parameter_extractor.rs  response_transformer.rs  return_type_generator.rs  schema_context.rs  schema_generator.rs
openapi-nexus-typescript/src/templating/: data.rs  environment.rs  filters.rs  functions.rs  templates.rs
openapi-nexus-typescript/src/utils/: http_method.rs  schema_mapper.rs
openapi-nexus-typescript/templates/api/: api_class.j2  operation.j2
openapi-nexus-typescript/templates/common/: file_header.j2
openapi-nexus-typescript/templates/model/: enum.j2  interface.j2  type_alias.j2
openapi-nexus-typescript/templates/models/: enum.j2  interface.j2  model.j2  model_helpers.j2  type_alias.j2
openapi-nexus-typescript/templates/project/: index.j2
openapi-nexus-typescript/templates/runtime/: runtime.j2
openapi-nexus-typescript/templates/typescript-fetch/: README.md.j2
openapi-nexus-typescript/tests/: golden_tests.rs  golden_tests_typescript_fetch.rs  sigil_api_scaffold.rs  sigil_enum_prototype.rs  sigil_kinds_stage_a.rs  sigil_kinds_stage_b.rs  sigil_kinds_stage_c.rs  sigil_slice_c_models.rs  sigil_spike_pet.rs
openapi-nexus/src/: language.rs  main.rs  openapi_code_generator.rs
(+8808 files in other folders)
