[workspace]
resolver = "3"
members = [
    "fixture-generators/additional-properties",
    "fixture-generators/enum-repr",
    "fixture-generators/petstore",
    "crates/openapi-nexus",
    "crates/openapi-nexus-config",
    "crates/openapi-nexus-core",
    "crates/openapi-nexus-ir",
    "crates/openapi-nexus-parser",
    "crates/openapi-nexus-spec",
    "crates/openapi-nexus-test-utils",
    "crates/generators/openapi-nexus-go-http",
    "crates/generators/openapi-nexus-rust-reqwest",
    "crates/generators/openapi-nexus-typescript-fetch",
]

[workspace.package]
version = "0.0.5"
edition = "2024"
rust-version = "1.90"
description = "OpenAPI 3.1 to code generator"
authors = ["Adam Basfop Cavendish <GetbetterABC@yeah.net>"]
repository = "https://github.com/adamcavendish/openapi-nexus"
readme = "README.md"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
derive_more = { version = "2", features = ["display", "from"] }
regex = "1.12.3"
axum = { version = "0.8.8", features = ["macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive", "env"] }
dirs = "6.0.0"
heck = "0.5.0"
http = "1.4.0"
indexmap = { version = "2.12.1", features = ["serde"] }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
serde_norway = "0.9.42"
serde_plain = "1.0.2"
similar = "2.7.0"
snafu = "0.8.9"
tokio = { version = "1.49.0", features = ["full"] }
toml = "0.9.8"
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-test = "0.2.5"
url = { version = "2.5.7", features = ["serde"] }
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono", "config", "debug", "non_strict_integers", "openapi_extensions", "time", "ulid", "url", "uuid", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "cache", "vendored"] }
uuid = { version = "1.19.0", features = ["v4", "v7", "serde"] }

# Workspace Projects
openapi-nexus = { version = "0.0.5", path = "crates/openapi-nexus" }
openapi-nexus-config = { version = "0.0.5", path = "crates/openapi-nexus-config" }
openapi-nexus-core = { version = "0.0.5", path = "crates/openapi-nexus-core" }
openapi-nexus-go-http = { version = "0.0.5", path = "crates/generators/openapi-nexus-go-http" }
openapi-nexus-ir = { version = "0.0.5", path = "crates/openapi-nexus-ir" }
openapi-nexus-parser = { version = "0.0.5", path = "crates/openapi-nexus-parser" }
openapi-nexus-rust-reqwest = { version = "0.0.5", path = "crates/generators/openapi-nexus-rust-reqwest" }
openapi-nexus-spec = { version = "0.0.5", path = "crates/openapi-nexus-spec" }
openapi-nexus-test-utils = { version = "0.0.5", path = "crates/openapi-nexus-test-utils" }
openapi-nexus-typescript-fetch = { version = "0.0.5", path = "crates/generators/openapi-nexus-typescript-fetch" }

sigil-stitch = "0.2.2"

[workspace.metadata.publish]
order = [
    "openapi-nexus-spec",
    "openapi-nexus-parser",
    "openapi-nexus-ir",
    "openapi-nexus-core",
    "openapi-nexus-config",
    "openapi-nexus-typescript-fetch",
    "openapi-nexus-go-http",
    "openapi-nexus-rust-reqwest",
    "openapi-nexus",
]
