[package]
name = "openapi-nexus-config"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
clap.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
tracing.workspace = true

openapi-nexus-common.workspace = true
openapi-nexus-core.workspace = true
