[package]
name = "openapi-nexus-core"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = true

[dependencies]
chrono.workspace = true
heck.workspace = true
http.workspace = true
minijinja.workspace = true
pretty.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-common.workspace = true
openapi-nexus-parser.workspace = true
openapi-nexus-transforms.workspace = true
