[package]
name = "openapi-nexus-ir"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
indexmap.workspace = true
serde.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-common.workspace = true

[dev-dependencies]
tempfile.workspace = true