[package]
name = "openapi-nexus-ir"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
indexmap.workspace = true
serde.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-common.workspace = true
openapi-nexus-spec.workspace = true

[dev-dependencies]
openapi-nexus-parser.workspace = true
tempfile.workspace = true