[package]
name = "openapi-nexus-parser"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true
