[package]
name = "openapi-nexus-rust"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
heck.workspace = true
indexmap.workspace = true
pretty.workspace = true
serde.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-plugin.workspace = true
openapi-nexus-spec.workspace = true
