[package]
name = "openapi-nexus-spec"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = true

[dependencies]
derive_more.workspace = true
http.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
url.workspace = true

[dev-dependencies]
serde_norway.workspace = true
