[package]
name = "openapi-nexus-transforms"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
heck.workspace = true
indexmap.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-common.workspace = true
openapi-nexus-ir.workspace = true
