[package]
name = "openapi-nexus-transforms"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
heck.workspace = true
indexmap.workspace = true
snafu.workspace = true
tracing.workspace = true

openapi-nexus-common.workspace = true
openapi-nexus-ir.workspace = true
openapi-nexus-parser.workspace = true
openapi-nexus-spec.workspace = true

[dev-dependencies]
serde_json.workspace = true
