[package]
name = "openapi-nexus-typescript"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
chrono.workspace = true
clap.workspace = true
heck.workspace = true
http.workspace = true
indexmap.workspace = true
minijinja-embed.workspace = true
minijinja.workspace = true
pretty.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true
snafu.workspace = true
tracing-subscriber.workspace = true
tracing-test.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-core.workspace = true
openapi-nexus-config.workspace = true
openapi-nexus-ir.workspace = true
openapi-nexus-plugin.workspace = true

[build-dependencies]
minijinja-embed.workspace = true

[dev-dependencies]
serde_norway.workspace = true
similar.workspace = true
tempfile.workspace = true
tracing-subscriber.workspace = true
