[package]
name = "openapi-nexus"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = true

[dependencies]
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

openapi-nexus-common.workspace = true
openapi-nexus-config.workspace = true
openapi-nexus-core.workspace = true
openapi-nexus-typescript.workspace = true