[package]
name = "openapi-nexus-common"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = true

[dependencies]
clap.workspace = true
serde.workspace = true
serde_plain.workspace = true
snafu.workspace = true
