[package]
name = "openapi-nexus-config"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = true

[dependencies]
clap.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true

openapi-nexus-core.workspace = true
