[package]
name = "openapi-nexus-core"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = true

[dependencies]
heck.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_plain.workspace = true

openapi-nexus-spec.workspace = true
