[package]
name = "openapi-nexus-ir"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
heck.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
utoipa.workspace = true

openapi-nexus-core.workspace = true
openapi-nexus-parser.workspace = true
openapi-nexus-spec.workspace = true

[dev-dependencies]
openapi-nexus-parser.workspace = true
tempfile.workspace = true