[package]
name = "openapi-nexus-test-utils"
version.workspace = true
edition.workspace = true
description = "Shared golden-test harness for openapi-nexus generators"
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[dependencies]
similar.workspace = true

openapi-nexus-core.workspace = true
openapi-nexus-ir.workspace = true
openapi-nexus-parser.workspace = true
