[package]
name = "fixture-generator-petstore"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "fixture-generator-petstore-server"
path = "src/bin/fixture-generator-petstore-server.rs"

[[bin]]
name = "fixture-generator-petstore-spec-generator"
path = "src/bin/fixture-generator-petstore-spec-generator.rs"

[dependencies]
axum.workspace = true
axum-extra.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
tokio.workspace = true
tower-http.workspace = true
tower.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
utoipa-swagger-ui.workspace = true
utoipa.workspace = true
uuid.workspace = true
