[package]
name = "openapi-nexus-go-http"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = true

[dependencies]
heck.workspace = true
serde.workspace = true
serde_json.workspace = true
sigil-stitch.workspace = true
snafu.workspace = true
toml.workspace = true
tracing.workspace = true

openapi-nexus-common.workspace = true
openapi-nexus-core.workspace = true
openapi-nexus-ir.workspace = true
openapi-nexus-spec.workspace = true

[dev-dependencies]
serde_norway.workspace = true
similar.workspace = true
tracing-test.workspace = true

openapi-nexus-parser.workspace = true
