[package]
name = "openapi-nexus-rust-common"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
publish = true

[dependencies]
heck.workspace = true
serde.workspace = true
serde_json.workspace = true
sigil-stitch.workspace = true
toml.workspace = true
tracing.workspace = true

openapi-nexus-core.workspace = true
openapi-nexus-ir.workspace = true
